crates/ferrum-interfaces/tests/ui/vnext/fail/resource_admission_permit_is_not_clone.rs
use ferrum_interfaces::vnext::{DeviceRuntime, StaticProvisioningPermit};

fn duplicate<R: DeviceRuntime>(permit: StaticProvisioningPermit<R>) {
    let _duplicate = permit.clone();
}

fn main() {}
